<resources>
    <string name="app_name" translatable="false">RichNotes</string>
    <string name="list" translatable="true">list (sortable)</string>
    <string name="hint_title">Note Title</string>
    <string name="hint_text">Note Information</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="note_saved">Note saved</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort" translatable="true">Sort</string>
    <string name="sort_down" translatable="true">Sort Down</string>
    <string name="sort_up" translatable="true">Sort Up</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_message">Do you really want to delete this note?</string>
    <string name="image">Image</string>
    <string name="text">Note Text</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="title">Title</string>
    <string name="my_image_description">Image Description</string>
    <string name="hint_longitude">"Longitude "</string>
    <string name="hint_latitude">Latitude</string>
    <string name="fragment_detail">FRAGMENT Detail</string>
    <string name="fragment_edit">FRAGMENT Edit</string>
    <string name="fragment_map">FRAGMENT Map</string>
    <string name="static_map">Static Map</string>
    <string name="click_for_update">Click for Update</string>
    <string name="add_a_sample">Add A Sample</string>
    <string name="add_samples_10">Add Samples (10)</string>
    <string name="delete_samples_10">Delete Samples (10)</string>
    <string name="delete_all_samples">Delete All Samples</string>
    <string name="samples_created">Samples created</string>
    <string name="edit">Edit</string>
    <string name="grid">Grid</string>
    <string name="map">Map</string>
    <string name="remove">remove</string>
    <string name="fragment_overlay">FRAGMENT Overlay</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="abort">Abort</string>
    <string name="samples_deleted">Samples deleted</string>
    <string name="sort_title_asc">Sort Title ASC</string>
    <string name="sort_title_desc">Sort Title DESC</string>
    <string name="updated_richnote">Updated RichNote</string>
    <string name="created_richnote">Created new RichNote</string>
    <string name="add_and_edit"><![CDATA[Add & Edit]]></string>
    <string name="editing">Editing</string>
    <string name="deleting">Deleting</string>

</resources>