<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/samples"
        android:icon="@drawable/ic_action_samples"
        android:title="Samples"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/add_one_samples"
                android:icon="@drawable/ic_action_add_circle_outline"
                android:title="@string/add_a_sample" />
            <item android:id="@+id/add_samples"
                android:icon="@drawable/ic_action_add_circle_outline"
                android:title="@string/add_samples_10" />

            <item android:id="@+id/delete_samples"
                android:icon="@drawable/ic_action_remove_circle_outline"
                android:title="@string/delete_samples_10" />
            <item android:id="@+id/delete_all_samples"
                android:icon="@drawable/ic_action_remove_circle_outline"
                android:title="@string/delete_all_samples" />
        </menu>
    </item>

</menu>