<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditFragment">

    <TextView
        android:id="@+id/e_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/fragment_edit"
        style="@style/EditItem.Header"/>

    <ImageView
        android:id="@+id/e_image"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:contentDescription="@string/my_image_description"
        android:src="@drawable/ic_launcher_background"
        android:textAlignment="textStart"
        style="@style/EditItem.Image"/>

    <EditText
        android:id="@+id/e_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/e_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:text=""
        android:hint="@string/hint_title"
        style="@style/EditItem.Title" />

    <EditText
        android:id="@+id/e_text"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:inputType="textMultiLine"
        android:layout_gravity="start"
        android:text=""
        android:hint="@string/hint_text"
        style="@style/EditItem.Text"/>

    <EditText
        android:id="@+id/e_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_gravity="start"
        android:hint="@string/hint_longitude"
        android:text="0.0"
        style="@style/EditItem.Location"/>

    <EditText
        android:id="@+id/e_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_gravity="start"
        android:hint="@string/hint_latitude"
        android:text="0.0"
        style="@style/EditItem.Location"/>

</LinearLayout>