<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <ImageView
            android:id="@+id/li_image"
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/my_image_description"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/li_title"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/title"
                android:textStyle="bold"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tvText"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:layout_width="205dp"
                android:layout_height="134dp"
                android:layout_gravity="start"
                android:background="@color/white"
                android:text="@string/text"
                android:textAlignment="textStart"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_location"
                     />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/longitude"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="|"/>

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/latitude"/>
            </LinearLayout>

        </LinearLayout>


</LinearLayout>